[tool.poetry]
name = "discrete chart"
version = "0.1.0"
description = ""
authors = ["Elias <1elias.bauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
